introduction section init

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Jakob Lindelöf Portfolio</title>
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/introduction.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,6 +19,14 @@
         <button class="home-button">Home</button>
         <button class="projects-button">Projects</button>
         <button class="contact-button">Contact</button>
+      </div>
+    </div>
+
+    <div class="introduction">
+      <div class="introduction-container">
+        <img class="headshot" src="images/headshott.png" alt="" />
+        <p class="name">Jakob Lindelöf</p>
+        <p>crazy information!!!</p>
       </div>
     </div>
   </body>
