--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="introduction-container">
         <img class="headshot" src="images/headshott.png" alt="" />
         <p class="name">Jakob Lindelöf</p>
-        <p>crazy information!!!</p>
+        <p>crazy information!!!!</p>
       </div>
     </div>
   </body>
